start implemending the order page

--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,11 @@
 
-picture upload working
 
 pg 2
+multi-pic upload
 text instructions page 2
-pre-select catagory page 2
-pics not stretch
 
 pg3
 text instructions
-round corners on pics
-pics fill frame
 
 pg4
 ordering component
@@ -23,3 +19,5 @@ send to company
 
 multimedia
 	animation instructions
+
+database
