upaded todo, added second set name call in upload

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,23 @@
+mobile friendliness:
+
+TOP BAR
+hide text in circles
+circles 40px
+welcome font size to 1.3rem
+
+SIDEBAR
+pg 1
+width:100px
+hide instructions	
+
+pg 2
+shrink text  .8rem
+buttons smaller
+
+pg 3
+take out labels
+color numbers to match
+
 
 
 Stretch goals
